ipc/mscom/MainThreadHandoff.cpp
@@ -6,6 +6,7 @@
 
 #include "mozilla/mscom/MainThreadHandoff.h"
 
+#include "mozilla/Move.h"
 #include "mozilla/mscom/InterceptorLog.h"
 #include "mozilla/mscom/Registration.h"
 #include "mozilla/mscom/Utils.h"
@@ -373,7 +374,8 @@ MainThreadHandoff::OnWalkInterface(REFIID aIid, PVOID* aInterface,
   }
 
   RefPtr<IUnknown> wrapped;
-  hr = Interceptor::Create(origInterface, handoff, aIid, getter_AddRefs(wrapped));
+  hr = Interceptor::Create(Move(origInterface), handoff, aIid,
+                           getter_AddRefs(wrapped));
   MOZ_ASSERT(SUCCEEDED(hr));
   if (FAILED(hr)) {
     return hr;
