ipc/mscom/MainThreadHandoff.h
@@ -8,6 +8,7 @@
 #define mozilla_mscom_MainThreadHandoff_h
 
 #include "mozilla/Assertions.h"
+#include "mozilla/Move.h"
 #include "mozilla/mscom/Interceptor.h"
 #include "mozilla/mscom/MainThreadInvoker.h"
 #include "mozilla/mscom/Utils.h"
@@ -26,7 +27,7 @@ public:
   static HRESULT Create(IInterceptorSink** aOutput);
 
   template <typename Interface>
-  static HRESULT WrapInterface(STAUniquePtr<Interface>& aTargetInterface,
+  static HRESULT WrapInterface(STAUniquePtr<Interface> aTargetInterface,
                                Interface** aOutInterface)
   {
     MOZ_ASSERT(!IsProxy(aTargetInterface.get()));
@@ -35,7 +36,7 @@ public:
     if (FAILED(hr)) {
       return hr;
     }
-    return CreateInterceptor(aTargetInterface, handoff, aOutInterface);
+    return CreateInterceptor(Move(aTargetInterface), handoff, aOutInterface);
   }
 
   // IUnknown
